# Daily-Backup-System

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  SECURITY.md  dbs.example.toml  pyproject.toml
.claude/skills/verify/: SKILL.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: ci.yml
docs/: BACKLOG.md  ROADMAP.md  architecture-analysis.md  architecture.md  backup-run-audit-2026-07-14.md  coding-philosophy.md  remind-me-integration-review-2026-07-21.md  research.md  scheduling.md  writing-a-connector.md
scripts/: collapse_reddit_revisions.py
src/dbs/: __init__.py  cli.py  config.py  crypto.py  notes_export.py  restore.py  templates.py
src/dbs/connectors/: __init__.py  _playwright.py  _tiptap.py  _util.py  bluesky.py  github.py  mastodon.py  pinboard.py  pocketcasts.py  podcast.py  raindrop.py  readwise.py  reddit.py  skool.py  spotify.py  udemy.py  vimeo.py  youtube.py
src/dbs/core/: __init__.py  cancel.py  capabilities.py  connector.py  engine.py  errors.py  hashing.py  http.py  models.py  netns.py  registry.py  secrets.py  service.py  timeutil.py  versioning.py
src/dbs/export/: __init__.py  archive.py  base.py  csv.py  json.py  markdown.py  ndjson.py  obsidian.py
src/dbs/research/: __init__.py  from_backup.py  models.py  notebooklm_client.py  pipeline.py  report.py  youtube_search.py
src/dbs/storage/: __init__.py  base.py  migrations.py  sqlite.py
src/dbs/web/: __init__.py  app.py  envfile.py  jobs.py  setup.py
src/dbs/web/static/: app.js  index.html  style.css
tests/: conftest.py  test_cancel.py  test_cli.py  test_config.py  test_crypto.py  test_doctor.py  test_engine.py  test_export.py  test_http.py  test_integration.py  test_media.py  test_notify.py  test_parallel.py  test_progress.py  test_registry.py  test_restore.py  test_review_fixes.py  test_schedule.py  test_storage.py  test_vpn_guard.py  test_web.py
tests/connectors/: test_github.py  test_pinboard.py  test_pocketcasts.py  test_podcast.py  test_raindrop.py  test_readwise.py  test_reddit.py  test_skool.py  test_social.py  test_tiptap.py  test_udemy.py  test_util.py  test_vimeo.py  test_youtube.py
tests/research/: test_from_backup.py  test_pipeline.py  test_report.py  test_youtube_search.py
