[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daily-backup-system"
version = "0.1.0"
description = "Modular, incremental daily backups of your data from multiple sources (Reddit, YouTube, Raindrop, ...) into SQLite, with portable exports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baileyrd" }]
keywords = ["backup", "raindrop", "reddit", "youtube", "incremental", "sqlite", "archive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
# Web management UI. The core never imports these; `dbs.web` imports them
# lazily and `dbs serve` errors helpfully if the extra is missing, so the CLI
# stays usable without it.
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "pytest-cov", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29"]
# Source connectors with heavy, browser/session-based dependencies. The core
# never imports these; each connector imports them lazily at run time, so the
# tool stays usable (and the connectors stay discoverable) without the extra.
reddit = ["playwright>=1.40"]
youtube = ["yt-dlp>=2024.1"]
skool = ["playwright>=1.40"]
# Ad-hoc YouTube research pipeline (`dbs research youtube`). Not a connector;
# imported lazily inside src/dbs/research/ so the CLI stays usable without
# this extra installed.
research = ["yt-dlp>=2024.1", "notebooklm-py[browser]"]

[project.scripts]
dbs = "dbs.cli:main"

# Built-in connectors are discovered through the SAME entry-point group that
# third-party connector packages use. This is the extensibility seam.
[project.entry-points."dbs.connectors"]
raindrop = "dbs.connectors.raindrop:RaindropConnector"
reddit = "dbs.connectors.reddit:RedditConnector"
youtube = "dbs.connectors.youtube:YouTubeConnector"
skool = "dbs.connectors.skool:SkoolConnector"

[project.urls]
Homepage = "https://github.com/baileyrd/daily-backup-system"
Repository = "https://github.com/baileyrd/daily-backup-system"

[tool.hatch.build.targets.wheel]
packages = ["src/dbs"]

[tool.hatch.build.targets.sdist]
include = ["src/dbs", "README.md", "docs", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-q"
