[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "daily-backup-system"
# Single-sourced from dbs.__version__ (see [tool.hatch.version]) so the
# package metadata and `dbs version` can never drift apart.
dynamic = ["version"]
description = "Modular, incremental daily backups of your data from multiple sources (Reddit, YouTube, Raindrop, ...) into SQLite, with portable exports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "baileyrd" }]
keywords = ["backup", "raindrop", "reddit", "youtube", "incremental", "sqlite", "archive"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: System :: Archiving :: Backup",
]
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "typer>=0.12",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
# Encrypted export bundles (`dbs export --encrypt` / `dbs decrypt`). Imported
# lazily inside src/dbs/crypto.py; everything else works without it.
crypto = ["cryptography>=41"]
# Web management UI. The core never imports these; `dbs.web` imports them
# lazily and `dbs serve` errors helpfully if the extra is missing, so the CLI
# stays usable without it.
web = ["fastapi>=0.110", "uvicorn>=0.29"]
dev = ["pytest>=8", "pytest-cov", "ruff>=0.4", "httpx>=0.27", "fastapi>=0.110", "uvicorn>=0.29", "cryptography>=41"]
# Source connectors with heavy, browser/session-based dependencies. The core
# never imports these; each connector imports them lazily at run time, so the
# tool stays usable (and the connectors stay discoverable) without the extra.
reddit = ["playwright>=1.40"]
# yt-dlp[default] bundles yt-dlp-ejs — required to solve YouTube's JS
# challenge; without it, extraction silently degrades to "Sign in to confirm
# you're not a bot" regardless of cookies/headers. nodejs-wheel is an
# auto-managed portable Node.js binary (same idea as skool's ffmpeg-downloader
# extra) so that solver has a runtime to execute without a separate system install.
youtube = ["yt-dlp[default]>=2026.1.29", "nodejs-wheel>=22"]
skool = [
    # yt-dlp[curl-cffi] adds the curl_cffi backend for browser TLS-fingerprint
    # impersonation, needed to download a lesson's Vimeo videoLink (Vimeo
    # otherwise rejects yt-dlp's fingerprint with "blocked due to its TLS
    # fingerprint" on data-center/VPN IPs).
    "playwright>=1.40", "yt-dlp[default,curl-cffi]>=2026.1.29", "nodejs-wheel>=22",
    "ffmpeg-downloader>=0.5",
]
# Standalone Vimeo connector. The default metadata backup runs on the core
# httpx client (no extra); this is only needed for the opt-in download_videos
# path, where yt-dlp[curl-cffi] impersonates a browser to beat Vimeo's TLS block.
vimeo = ["yt-dlp[default,curl-cffi]>=2026.1.29"]
# Ad-hoc YouTube research pipeline (`dbs research youtube`). Not a connector;
# imported lazily inside src/dbs/research/ so the CLI stays usable without
# this extra installed.
research = ["yt-dlp[default]>=2026.1.29", "nodejs-wheel>=22", "notebooklm-py[browser]"]

[project.scripts]
dbs = "dbs.cli:main"

# Built-in connectors are discovered through the SAME entry-point group that
# third-party connector packages use. This is the extensibility seam.
[project.entry-points."dbs.connectors"]
bluesky = "dbs.connectors.bluesky:BlueskyConnector"
github = "dbs.connectors.github:GitHubConnector"
mastodon = "dbs.connectors.mastodon:MastodonConnector"
podcast = "dbs.connectors.podcast:PodcastConnector"
pocketcasts = "dbs.connectors.pocketcasts:PocketCastsConnector"
udemy = "dbs.connectors.udemy:UdemyConnector"
spotify = "dbs.connectors.spotify:SpotifyConnector"
pinboard = "dbs.connectors.pinboard:PinboardConnector"
readwise = "dbs.connectors.readwise:ReadwiseConnector"
raindrop = "dbs.connectors.raindrop:RaindropConnector"
reddit = "dbs.connectors.reddit:RedditConnector"
youtube = "dbs.connectors.youtube:YouTubeConnector"
skool = "dbs.connectors.skool:SkoolConnector"
vimeo = "dbs.connectors.vimeo:VimeoConnector"

[project.urls]
Homepage = "https://github.com/baileyrd/daily-backup-system"
Repository = "https://github.com/baileyrd/daily-backup-system"

[tool.hatch.version]
path = "src/dbs/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/dbs"]

[tool.hatch.build.targets.sdist]
include = ["src/dbs", "README.md", "docs", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "tests"]
addopts = "-q"
